argocd-main/resources/uat/vehicle-record/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: farin-vehicle-record-deployment
  namespace: uat
  labels:
    app: farin-vehicle-record
spec:
  replicas: 7
  selector:
    matchLabels:
      app: farin-vehicle-record
  template:
    metadata:
      labels:
        app: farin-vehicle-record
    spec:
      containers:
      - name: farin-vehicle-record
        image: kohandani/farin-vehicle-record:local
        resources:
          requests:
            memory: "200Mi"
            cpu: "100m"
          limits:
            memory: "4500Mi"
            cpu: "2000m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name: config-env
          subPath: env
          mountPath: /app/.env
        livenessProbe:
          httpGet:
            path: /liveness
            port: 80
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          timeoutSeconds: 30
          initialDelaySeconds: 10
          periodSeconds: 70

      volumes:
      - configMap:
          name: farin-vehicle-record
        name: config-env
