argocd-main/resources/uat/vehicle-record/httprouter.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-vehicle-record
  namespace: uat
spec:
  parentRefs:
  - name: default-gateway
    namespace: gateway-resources
  hostnames:
  - vr.gw.k8s.sh.aban.io
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: farin-vehicle-record-svc
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
